# input-switch

./: CMakeLists.txt  README.md  main.c
ldscripts/: i386.ldscript  x86_64.ldscript
